# dividend-select

./: .dockerignore  .env.example  .gitignore  Dockerfile  display_results.py  docker-compose.yml  gen_prev_snapshot.py  generate_one_pager.py  main.py  pyproject.toml  update_pe_data.py
config/: app.yaml  settings.yaml
data/: M120数据.csv  PE数据.csv  个股板块映射.csv  个股板块映射_2026Q2.csv  个股申万行业映射.csv  个股申万行业映射_2026Q2.csv  股东户数汇总_2026Q2.csv  股票分红次数汇总.csv  财务指标汇总_2026Q2.csv  近3年股息率汇总.csv
data/2026-03/: M120数据.csv  PE数据.csv  个股板块映射.csv  红利指数持仓汇总.csv  股票分红次数汇总_2026-03.csv  近3年股息率汇总_2026-03.csv
data/fhps/: fhps_20251231.csv
discuss/: A股高股息率TOP50查询工具-技术规范.md  宏观经济数据获取研报调研.md  股息率刷新接口-技术规范.md  股息率展示前端界面-技术规范.md  股息率表格技术指标扩展-技术规范.md  股票板块映射更新程序-技术规范.md  项目逻辑梳理与整合计划.md
docs/: API接口文档.md  PENDING.md  api.md  data-sources.md  板块映射生成方案对比.md
scripts/: board_probe.py  deploy.sh  run-local.sh  run.sh  run_full.sh  start.sh  stop.sh  test-run.sh
src/: __init__.py  main.py
src/api/: __init__.py  models.py  routes.py
src/core/: __init__.py  calculator.py
src/data/: __init__.py  board_eastmoney.py  board_fetcher.py  board_loader.py  fetcher.py  fhps_fetcher.py  financial_fetcher.py  models.py  shareholder_fetcher.py  sw_industry_fetcher.py
src/services/: __init__.py  base.py  data_reader.py  favorites_service.py  filter_service.py  m120_service.py  pe_service.py  (+5 more)
tests/: test_calculator.py  test_csv_path_service.py  test_favorites_api.py  test_favorites_service.py  test_fetcher.py  test_financial_fetcher.py  test_m120_service.py  test_models.py  test_processor.py
(+6 files in other folders)
